
<git-updates>
  - fix title font size for channel activity
  - fix for temporal data calculation
  - removed GenomeGeometry as a way for handling Series length attributes
  - abstraction of length distribution handling
  - added only PASSED reads as test case
  - bamread as setup dependency
0.3.1 - (20 Jan 20)
  - update to megrim package version reporting (.__version__)
  - fix title font size for q_l distribution
  - tabular barcodes returns Null if non-barcoded collection
  - dropped monolithic import of everything
0.3.0 - (19 Jan 20)
  - features complete for basic_qc